SERVER-64102 Ensure that unpacking measurements doesn't overwrite pushedown addFields that are computed on meta data

(cherry picked from commit 3a8cf3d2d1c6f668607756ab0b972f9ca2148f18)